crates/test-files/fixtures/compile_errors/call_non_pub_fn_on_external_contract.fe
contract Foo {
    val: u8

    fn do_private_thingz(mut self) {
        self.val = 100
    }
}

contract Bar {
    fn test() {
        Foo(address(0)).do_private_thingz()
    }
}
